--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -228,6 +228,7 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
+  background: url("../img/hero.jpg") top center;
   background-size: cover;
 }
 
